--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -5,24 +5,24 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th> Id </th>
-        <th> Name </th>
-        <th> Number </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:if="${buddies.empty}">
-        <td colspan="3"> No buddies Available </td>
-    </tr>
-    <tr th:each="buddy : ${buddies}">
-        <td><span th:text="${buddy.id}"> Id </span></td>
-        <td><span th:text="${buddy.name}"> Name </span></td>
-        <td><span th:text="${buddy.number}"> Number </span></td>
-    </tr>
-    </tbody>
-</table>
+    <table>
+        <thead>
+        <tr>
+            <th> Id </th>
+            <th> Name </th>
+            <th> Number </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:if="${buddies == null}">
+            <td colspan="3"> No buddies Available </td>
+        </tr>
+        <tr th:each="buddy : ${buddies}">
+            <td><span th:text="${buddy.id}"> Id </span></td>
+            <td><span th:text="${buddy.name}"> Name </span></td>
+            <td><span th:text="${buddy.number}"> Number </span></td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
